--- a/site2.0/css/quiz.css
+++ b/site2.0/css/quiz.css
@@ -51,6 +51,14 @@
     background: #012030;
 }
 
+.progress{
+    position: fixed;
+    top: 0%;
+    left: 0;
+    box-shadow: 0 0 5px var(--cor_caixa_titulo), 0 0 25px var(--cor_caixa_titulo), 0 0 50px var(--cor_caixa_titulo),
+    0 0 200px var(--cor_caixa_titulo);
+}
+
 #bola_numero{
     position: fixed;
     border-radius: 50%;
