--- a/site2.0/css/style.css
+++ b/site2.0/css/style.css
@@ -49,31 +49,6 @@ h2{
     50%{opacity: 0.5;}
     to{opacity: 1;}
 }
-
-/* css da nav bar*/
-#barra{
-    position: fixed;
-    top: 0;
-    background-color: #EBEBEB;
-    width: 100%;
-    height: 40px;
-    z-index: 2;
-    display: none;
-}
-
-#dropdown{
-    position: absolute;
-    top: 1px;
-    left: 0;
-}
-
-#simbolo_tema{
-    position: absolute;
-    top: 50%;
-    cursor: pointer;
-    transform: translate(-50%, -50%);
-}
-
 /* css da tela inicial*/
 #inicio{
     position: absolute;
@@ -88,7 +63,7 @@ h2{
 #btn_começar{
     position: absolute;
     cursor: pointer;
-    top: 240px;
+    top: var(--top_botao_comecar);
     left: 3%;
     border-radius: 88px;
     background-color: #DBF227;
@@ -106,8 +81,8 @@ h2{
 
 #imagem_globo{
     position: absolute;
-    right: 20%;
-    top:30%;
+    right: var(--right_imagem_globo);
+    top: var(--top_imagem_globo);
     width: var(--tamanho_imagem_globo);
     height: var(--tamanho_imagem_globo);
     transition: transform 1s;
@@ -117,9 +92,6 @@ h2{
     transform: scale(1.05);
 }
 
-#divisa1{
-
-}
 
 /* css da tela dos nossos objetivos*/
 #objetivo{
@@ -320,6 +292,9 @@ h2{
     --tamanho_circulo_equipe : 20px;
     --tamanho_texto_funcionalidade : 20px;
     --largura_bt_inicializador : 250px;
+    --top_imagem_globo : 30%;
+    --right_imagem_globo : 20%;
+    --top_botao_comecar : 240px;
 }
 
 @media screen and (max-width : 700px){
@@ -333,6 +308,9 @@ h2{
         --tamanho_circulo_equipe : 15px;
         --tamanho_texto_funcionalidade : 14px;
         --largura_bt_inicializador : 150px;
+        --top_imagem_globo : 45%;
+        --right_imagem_globo : 10%;
+        --top_botao_comecar : 290px;
     }
     
     #barra{
