--- a/site2.0/css/style.css
+++ b/site2.0/css/style.css
@@ -320,7 +320,7 @@ h2{
     top: 3420px;
     height: 800px;
     width: 100%;
-    background: linear-gradient(to right, #45C4B0, #2a9988);
+    background: linear-gradient(to bottom, #45C4B0, #298b7d);
 }
 
 #navegacao{
